==> kibu-keyboards/qmk_firmware/qmk_firmware/lib/chibios-contrib/os/hal/ports/GD/GD32VF103/DMAv1/gd32_dma.c <==
#include "hal.h"
#define GD32_DMA0_STREAMS_MASK     ((1U << GD32_DMA0_NUM_CHANNELS) - 1U)
#define GD32_DMA1_STREAMS_MASK     (((1U << GD32_DMA1_NUM_CHANNELS) -     \
                                      1U) << GD32_DMA0_NUM_CHANNELS)
#define DMA0_CH0_VARIANT            0
#define DMA0_CH1_VARIANT            0
#define DMA0_CH2_VARIANT            0
#define DMA0_CH3_VARIANT            0
#define DMA0_CH4_VARIANT            0
#define DMA0_CH5_VARIANT            0
#define DMA0_CH6_VARIANT            0
#define DMA1_CH0_VARIANT            0
#define DMA1_CH1_VARIANT            0
#define DMA1_CH2_VARIANT            0
#define DMA1_CH3_VARIANT            0
#define DMA1_CH4_VARIANT            0
#define GD32_DMA0_CH0_CMASK        (1U << 0U)
#define GD32_DMA0_CH1_CMASK        (1U << 1U)
#define GD32_DMA0_CH2_CMASK        (1U << 2U)
#define GD32_DMA0_CH3_CMASK        (1U << 3U)
#define GD32_DMA0_CH4_CMASK        (1U << 4U)
#define GD32_DMA0_CH5_CMASK        (1U << 5U)
#define GD32_DMA0_CH6_CMASK        (1U << 6U)
#define GD32_DMA1_CH0_CMASK        (1U << (GD32_DMA0_NUM_CHANNELS + 0U))
#define GD32_DMA1_CH1_CMASK        (1U << (GD32_DMA0_NUM_CHANNELS + 1U))
#define GD32_DMA1_CH2_CMASK        (1U << (GD32_DMA0_NUM_CHANNELS + 2U))
#define GD32_DMA1_CH3_CMASK        (1U << (GD32_DMA0_NUM_CHANNELS + 3U))
#define GD32_DMA1_CH4_CMASK        (1U << (GD32_DMA0_NUM_CHANNELS + 4U))

void dmaInit(void) {
  int i;

  dma.allocated_mask = 0U;
  dma.isr_mask       = 0U;
  for (i = 0; i < GD32_DMA_STREAMS; i++) {
    _gd32_dma_streams[i].channel->CTL = GD32_DMA_CTL_RESET_VALUE;
    dma.streams[i].func = NULL;
  }
  DMA0->INTC = 0xFFFFFFFFU;
  DMA1->INTC = 0xFFFFFFFFU;
}

const gd32_dma_stream_t *dmaStreamAllocI(uint32_t id,
                                          uint32_t priority,
                                          gd32_dmaisr_t func,
                                          void *param) {
  uint32_t i, startid, endid;

  osalDbgCheckClassI();

  if (id < GD32_DMA_STREAMS) {
    startid = id;
    endid   = id;
  } else {
    osalDbgCheck(false);
    return NULL;
  }

  for (i = startid; i <= endid; i++) {
    uint32_t mask = (1U << i);
    if ((dma.allocated_mask & mask) == 0U) {
      const gd32_dma_stream_t *dmastp = GD32_DMA_STREAM(i);

      /* Installs the DMA handler.*/
      dma.streams[i].func  = func;
      dma.streams[i].param = param;
      dma.allocated_mask  |= mask;

      /* Enabling DMA clocks required by the current streams set.*/
      if ((GD32_DMA0_STREAMS_MASK & mask) != 0U) {
        rcuEnableDMA0(true);
      }

      if ((GD32_DMA1_STREAMS_MASK & mask) != 0U) {
        rcuEnableDMA1(true);
      }

      /* Enables the associated IRQ vector if not already enabled and if a
         callback is defined.*/
      if (func != NULL) {
        if ((dma.isr_mask & dmastp->cmask) == 0U) {
          eclicEnableVector(dmastp->vector, priority, ECLIC_DMA_TRIGGER);
        }
        dma.isr_mask |= mask;
      }

      /* Putting the stream in a known state.*/
      dmaStreamDisable(dmastp);
      dmastp->channel->CTL = GD32_DMA_CTL_RESET_VALUE;

      return dmastp;
    }
  }

  return NULL;
}

const gd32_dma_stream_t *dmaStreamAlloc(uint32_t id,
                                         uint32_t priority,
                                         gd32_dmaisr_t func,
                                         void *param) {
  const gd32_dma_stream_t *dmastp;

  osalSysLock();
  dmastp = dmaStreamAllocI(id, priority, func, param);
  osalSysUnlock();

  return dmastp;
}

void dmaStreamFreeI(const gd32_dma_stream_t *dmastp) {
  uint32_t selfindex = (uint32_t)dmastp->selfindex;

  osalDbgCheck(dmastp != NULL);

  /* Check if the streams is not taken.*/
  osalDbgAssert((dma.allocated_mask & (1 << selfindex)) != 0U,
                "not allocated");

  /* Marks the stream as not allocated.*/
  dma.allocated_mask &= ~(1U << selfindex);
  dma.isr_mask &= ~(1U << selfindex);

  /* Disables the associated IRQ vector if it is no more in use.*/
  if ((dma.isr_mask & dmastp->cmask) == 0U) {
    eclicDisableVector(dmastp->vector);
  }

  /* Removes the DMA handler.*/
  dma.streams[selfindex].func  = NULL;
  dma.streams[selfindex].param = NULL;

  /* Shutting down clocks that are no more required, if any.*/
  if ((dma.allocated_mask & GD32_DMA0_STREAMS_MASK) == 0U) {
    rcuDisableDMA0();
  }
  if ((dma.allocated_mask & GD32_DMA1_STREAMS_MASK) == 0U) {
    rcuDisableDMA1();
  }
}

void dmaServeInterrupt(const gd32_dma_stream_t *dmastp) {
  uint32_t flags;
  uint32_t selfindex = (uint32_t)dmastp->selfindex;

  flags = (dmastp->dma->INTF >> dmastp->shift) & GD32_DMA_INTF_MASK;
  if (flags & dmastp->channel->CTL) {
    dmastp->dma->INTC = flags << dmastp->shift;
    if (dma.streams[selfindex].func) {
      dma.streams[selfindex].func(dma.streams[selfindex].param, flags);
    }
  }
}
