==> kibu-keyboards/qmk_firmware/qmk_firmware/lib/chibios-contrib/os/hal/ports/AT32/LLD/DMAv1/at32_dma.c <==
#include "hal.h"
#define AT32_DMA1_STREAMS_MASK      ((1U << AT32_DMA1_NUM_CHANNELS) - 1U)
#define AT32_DMA2_STREAMS_MASK      (((1U << AT32_DMA2_NUM_CHANNELS) -      \
                                      1U) << AT32_DMA1_NUM_CHANNELS)
#define DMA1_CH1_VARIANT            0
#define DMA1_CH2_VARIANT            0
#define DMA1_CH3_VARIANT            0
#define DMA1_CH4_VARIANT            0
#define DMA1_CH5_VARIANT            0
#define DMA1_CH6_VARIANT            0
#define DMA1_CH7_VARIANT            0
#define DMA2_CH1_VARIANT            0
#define DMA2_CH2_VARIANT            0
#define DMA2_CH3_VARIANT            0
#define DMA2_CH4_VARIANT            0
#define DMA2_CH5_VARIANT            0
#define DMA2_CH6_VARIANT            0
#define DMA2_CH7_VARIANT            0
#define AT32_DMA1_CH1_CMASK        (1U << 0U)
#define AT32_DMA1_CH2_CMASK        (1U << 1U)
#define AT32_DMA1_CH3_CMASK        (1U << 2U)
#define AT32_DMA1_CH4_CMASK        (1U << 3U)
#define AT32_DMA1_CH5_CMASK        (1U << 4U)
#define AT32_DMA1_CH6_CMASK        (1U << 5U)
#define AT32_DMA1_CH7_CMASK        (1U << 6U)
#define AT32_DMA2_CH1_CMASK        (1U << (AT32_DMA1_NUM_CHANNELS + 0U))
#define AT32_DMA2_CH2_CMASK        (1U << (AT32_DMA1_NUM_CHANNELS + 1U))
#define AT32_DMA2_CH3_CMASK        (1U << (AT32_DMA1_NUM_CHANNELS + 2U))
#define AT32_DMA2_CH4_CMASK        (1U << (AT32_DMA1_NUM_CHANNELS + 3U))
#define AT32_DMA2_CH5_CMASK        (1U << (AT32_DMA1_NUM_CHANNELS + 4U))

void dmaInit(void) {
  int i;

  dma.allocated_mask = 0U;
  dma.sts_mask       = 0U;
  for (i = 0; i < AT32_DMA_STREAMS; i++) {
    _at32_dma_streams[i].channel->CCTRL = AT32_DMA_CCTRL_RESET_VALUE;
    dma.streams[i].func = NULL;
  }
  DMA1->CLR = 0xFFFFFFFFU;
#if AT32_DMA2_NUM_CHANNELS > 0
  DMA2->CLR = 0xFFFFFFFFU;
#endif
}

const at32_dma_stream_t *dmaStreamAllocI(uint32_t id,
                                          uint32_t priority,
                                          at32_dmasts_t func,
                                          void *param) {
  uint32_t i, startid, endid;

  osalDbgCheckClassI();

  if (id < AT32_DMA_STREAMS) {
    startid = id;
    endid   = id;
  }
  else {
    osalDbgCheck(false);
    return NULL;
  }

  for (i = startid; i <= endid; i++) {
    uint32_t mask = (1U << i);
    if ((dma.allocated_mask & mask) == 0U) {
      const at32_dma_stream_t *dmastp = AT32_DMA_STREAM(i);

      /* Installs the DMA handler.*/
      dma.streams[i].func  = func;
      dma.streams[i].param = param;
      dma.allocated_mask  |= mask;

      /* Enabling DMA clocks required by the current streams set.*/
      if ((AT32_DMA1_STREAMS_MASK & mask) != 0U) {
        crmEnableDMA1(true);
      }
#if AT32_DMA2_NUM_CHANNELS > 0
      if ((AT32_DMA2_STREAMS_MASK & mask) != 0U) {
        crmEnableDMA2(true);
      }
#endif

      /* Enables the associated IRQ vector if not already enabled and if a
         callback is defined.*/
      if (func != NULL) {
        if ((dma.sts_mask & dmastp->cmask) == 0U) {
          nvicEnableVector(dmastp->vector, priority);
        }
        dma.sts_mask |= mask;
      }

      /* Putting the stream in a known state.*/
      dmaStreamDisable(dmastp);
      dmastp->channel->CCTRL = AT32_DMA_CCTRL_RESET_VALUE;

      return dmastp;
    }
  }

  return NULL;
}

const at32_dma_stream_t *dmaStreamAlloc(uint32_t id,
                                         uint32_t priority,
                                         at32_dmasts_t func,
                                         void *param) {
  const at32_dma_stream_t *dmastp;

  osalSysLock();
  dmastp = dmaStreamAllocI(id, priority, func, param);
  osalSysUnlock();

  return dmastp;
}

void dmaStreamFreeI(const at32_dma_stream_t *dmastp) {
  uint32_t selfindex = (uint32_t)dmastp->selfindex;

  osalDbgCheck(dmastp != NULL);

  /* Check if the streams is not taken.*/
  osalDbgAssert((dma.allocated_mask & (1 << selfindex)) != 0U,
                "not allocated");

  /* Marks the stream as not allocated.*/
  dma.allocated_mask &= ~(1U << selfindex);
  dma.sts_mask &= ~(1U << selfindex);

  /* Disables the associated IRQ vector if it is no more in use.*/
  if ((dma.sts_mask & dmastp->cmask) == 0U) {
    nvicDisableVector(dmastp->vector);
  }

  /* Removes the DMA handler.*/
  dma.streams[selfindex].func  = NULL;
  dma.streams[selfindex].param = NULL;

  /* Shutting down clocks that are no more required, if any.*/
  if ((dma.allocated_mask & AT32_DMA1_STREAMS_MASK) == 0U) {
    crmDisableDMA1();
  }
#if AT32_DMA2_NUM_CHANNELS > 0
  if ((dma.allocated_mask & AT32_DMA2_STREAMS_MASK) == 0U) {
    crmDisableDMA2();
  }
#endif
}

void dmaServeInterrupt(const at32_dma_stream_t *dmastp) {
  uint32_t flags;
  uint32_t selfindex = (uint32_t)dmastp->selfindex;

  flags = (dmastp->dma->STS >> dmastp->shift) & AT32_DMA_STS_MASK;
  if (flags & dmastp->channel->CCTRL) {
    dmastp->dma->CLR = flags << dmastp->shift;
    if (dma.streams[selfindex].func) {
      dma.streams[selfindex].func(dma.streams[selfindex].param, flags);
    }
  }
}
